Bug 343303, onblur fires before onchange for comboboxes, r+sr=bz